<resources>
    <string name="app_name">Smart Express Driver</string>
    <string name="msg_loading">Xin chờ...</string>

    <!--Network error-->
    <string name="newtwork_error">Không thể kết nối, vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="newtwork_error_button_retry">Thử lại</string>
    <string name="newtwork_error_button_exit">Thoát</string>
    <string name="empty_user_pass">Username and password can not be empty</string>
    <string name="wrong_user_pass">Wrong username or password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password_hint">Password</string>
    <string name="driver_name">Tran To Hong Nguyen</string>
    <string name="input_name">Nhập họ và tên</string>
    <string name="rating">4.9</string>
    <string name="full_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="input_email">Nhập địa chỉ email</string>
    <string name="input_phone">Nhập số điện thoại</string>
    <string name="phone">Số điện thoại</string>
    <string name="update_profile">Cập nhật</string>
    <string name="activity_rate">Tỷ lệ hoạt động</string>
    <string name="date_time">Ngày</string>
    <string name="week_time">Tuần</string>
    <string name="month_time">Tháng</string>
    <string name="time">Từ 01/10/2023 đến 01/10/2023</string>
    <string name="accept_rate">Tỉ lệ nhận chuyến</string>
    <string name="percent_100">100%</string>
    <string name="cancel_rate">Tỉ lệ hủy chuyến</string>
    <string name="percent_0">0%</string>
    <string name="complete_rate">Tỉ lệ hoàn thành chuyến</string>
    <string name="config_all_bike_service">Cấu hình dịch vụ Allbike</string>
    <string name="allbike">Allbike</string>
    <string name="alldelivery">AllDelivery</string>
    <string name="all_food">AllFood</string>
    <string name="advance_amount">Mức tiền ứng trước cho giao hàng/ đồ ăn</string>
    <string name="advance_amount_value">Nhỏ hơn hoặc bằng 200</string>
    <string name="all_bike_one_way">AllBike đi tỉnh 1 chiều</string>
    <string name="all_bike_two_way">AllBike đi tỉnh 2 chiều</string>
    <string name="wait_time">Thời gian chờ quay về</string>
    <string name="wait_time_value">Dưới 10 phút</string>
    <string name="other_config">Cấu hình khác</string>
    <string name="volume">Âm lượng chuông</string>
    <string name="message_notification">Thông báo tin nhắn</string>
    <string name="welcome_title">Driver with Allwin</string>
    <string name="welcome_subtitle">Hãy trở thành một phần của đội ngũ tài xế chuyên nghiệp của chúng tôi. Cùng nhau, chúng ta sẽ mang đến những trải nghiệm giao hàng tuyệt vời cho khách hàng.</string>
    <string name="next">Tiếp tục</string>
    <string name="signup">Đăng ký</string>
    <string name="required_star">*</string>
    <string name="fullName">Họ và tên</string>
    <string name="fullName_hint">Nhập họ và tên</string>
    <string name="email_hint">Nhập địa chỉ email</string>
    <string name="phone_hint">Nhập số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_income">Thu nhập</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_account">Tài khoản</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="award">Chương trình thưởng</string>
    <string name="review_by_customer">Đánh giá từ khách hàng</string>
    <string name="profile_setting">Cài đặt</string>
    <string name="history">Lịch sử</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="trip_history_title">Thông tin chuyến đi</string>
    <string name="completed">Hoàn thành</string>
    <string name="canceled">Đã hủy</string>
    <string name="currency">đ</string>
    <string name="logout_description">Bạn muốn đăng xuất khỏi ứng dụng</string>
    <string name="cancel">Hủy</string>
    <string name="rate">đánh giá</string>
    <string name="achievement_title1">Đồng hành cùng Allwin</string>
    <string name="achievement_title2">Chuyến đi hoàn thành</string>
    <string name="achievement_trip">Vận chuyển</string>
    <string name="achievement_package_delivery">Giao hàng</string>
    <string name="achievement_food_delivery">Giao đồ ăn</string>
    <string name="achievement_customer_rate">Khách hàng nhận xét</string>
    <string name="login_title">Đăng nhập</string>
    <string name="forget_pw">Quên mật khẩu?</string>
    <string name="pw_input">Nhập mật khẩu</string>
    <string name="please_enter_phone">Vui lòng nhập số điện thoại của bạn</string>
    <string name="your_phone_number">Số điện thoại của bạn</string>
    <string name="otp_title">Nhập mã OTP</string>
    <string name="send_otp_title">Gửi lại mã xác thực</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="send_message">Nhắn tin</string>
    <string name="call_customer">Gọi khách hàng</string>
    <string name="cancel_trip">Hủy đơn</string>
    <string name="accept_trip">Nhận đơn</string>
    <string name="end_trip">Trả hàng</string>
    <string name="ended_trip">Đã hoàn tất giao hàng</string>
    <string name="completed_trip">Chuyến đi hoàn tất</string>
    <string name="canceled_trip">Hủy thành công</string>
    <string name="cancel_trip_dialog">Bạn muốn hủy đơn?</string>
    <string name="back">Quay lại</string>
    <string name="confirm">Xác nhận</string>
    <string name="empty_note">Không có ghi chú</string>
    <string name="money_income">440.000đ</string>
    <string name="income_description">(Thu nhập từ chuyến đi và các khoản thanh toán khác)</string>
    <string name="trip_complete_count">Hoàn thành 15 chuyến đi</string>
    <string name="total">Tổng thu</string>
    <string name="pre_tax_fee">Phí trước thuế</string>
    <string name="discount">510.000đ</string>
    <string name="tax">Thuế (2%)</string>
    <string name="money_500">500.000đ</string>
    <string name="money_50">-50.000đ</string>
    <string name="money_10">10.000đ</string>
    <string name="discount_percent">Giảm giá (10%)</string>
    <string name="income_fragment_title">Thu nhập và các khoản khác</string>
    <string name="all_bike">AllBike</string>
    <string name="review_driver">Tài xế thân thiện</string>
    <string name="location_from">150/17 Đinh Tiên Hoàng, P26, Q3</string>
    <string name="location_to">Masteri Thảo điền</string>
    <string name="location_to_information">Điểm đến 20 phút (4 km)</string>
    <string name="location_from_information">Điểm đón 2 phút (0,4 km)</string>
    <string name="trip">Chuyến đi</string>
    <string name="trip_time_online">Online</string>
    <string name="trip_count_value">200</string>
    <string name="online_time_value">48h 30p</string>
    <string name="trip_history">Lịch sử chuyến</string>
    <string name="award_program">Chương trình thưởng</string>
    <string name="notification_header">Thông báo</string>
    <string name="date_award">10/09/2023</string>
    <string name="hot_news">Tin hot - AllWin ra mắt All Car</string>
    <string name="signup_now">Đăng kí ngay thôi!!!</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="renew_password">Đặt lại mật khẩu</string>
    <string name="empty_phone_error">Số để thoại không được để trống</string>
    <string name="empty_password_error">Mật khẩu không được để trống</string>
    <string name="empty_fullname_error">Họ và tên không được để trống</string>
    <string name="empty_email_error">Email không được để trống</string>
    <string name="all_win_hello">Xin chào</string>
    <string name="index_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="login_driver">Đăng nhập</string>
    <string name="register_driver">Đăng kí</string>
    <string name="notify_disabled_gps">Vị trí thiết bị của bạn đang tắt!</string>
    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="processing">Đang xử lí</string>
    <string name="trip_count">chuyến đi</string>
    <string name="pickup">Lấy hàng</string>
    <string name="customer_cancel_booking">Khách hàng đã hủy</string>
    <string name="trip_information">Thông tin đơn hàng</string>
    <string name="payment">Thanh toán</string>
    <string name="fee">Cước phí</string>
    <string name="payment_cash">Thanh toán tiền mặt</string>
    <string name="order_code">Mã đơn hàng:</string>
    <string name="trip_details">Thông tin đơn hàng</string>
    <string name="origin">Điểm lấy hàng</string>
    <string name="destination">Giao đến</string>
    <string name="code">Mã</string>
    <string name="empty_activity">Bạn chưa có chuyến đi nào ở đây</string>
    <string name="show_more">Xem thêm</string>
    <string name="fg_activity">Hoạt động</string>
    <string name="current_order">Đơn hàng</string>
    <string name="ship_state_done">Bạn đã hoàn thành đơn này!</string>
    <string name="ship_state_accept">Đi lấy hàng nào!</string>
    <string name="ship_state_pickup">Đi giao hàng nào!</string>
    <string name="ship_state_new">Bạn có muốn nhận đơn này!</string>
    <string name="invalid_pw">Mật khẩu không được chứa khoảng trắng</string>
    <string name="network_error">Không thể kết nối, vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="send_otp_title2">Vui lòng kiểm tra điện thoại và nhập mã xác thực vào đây</string>
    <string name="send_otp_title3">Gửi lại mã xác thực</string>
    <string name="otp">OTP</string>
    <string name="send_otp_title1">"Mã xác thực sẽ được gửi đến "</string>
</resources>