<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="a"
            type="ww.smartexpress.driver.ui.signup.SignUpActivity" />
        <variable
            name="vm"
            type="ww.smartexpress.driver.ui.signup.SignUpViewModel" />
        <import type="android.text.TextUtils"></import>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30ssp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                style="@style/big_title">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullName"
                    style="@style/montserrat_medium_gray_12ssp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_star"
                    android:textColor="@color/red_color">

                </TextView>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/fullName_hint"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@={vm.fullName}"
                android:inputType="text"
                android:maxLength="50"
                android:textColorHint="@color/grey_text"
                style="@style/information_edit_text">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/montserrat_medium_gray_12ssp">

                </TextView>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@={vm.email}"
                android:textColorHint="@color/grey_text"
                style="@style/information_edit_text"
                android:visibility="gone">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    style="@style/montserrat_medium_gray_12ssp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_star"
                    android:textColor="@color/red_color">

                </TextView>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edt"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:text="@={vm.phone}"
                android:textColorHint="@color/grey_text"
                style="@style/information_edit_text">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    style="@style/montserrat_medium_gray_12ssp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_star"
                    android:textColor="@color/red_color">

                </TextView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">
                <EditText
                    android:paddingRight="@dimen/_35sdp"
                    android:id="@+id/edtPw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/pw_input"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/grey_text"
                    style="@style/information_edit_text"
                    android:text="@={vm.password}">

                </EditText>

                <ImageView
                    android:onClick="@{(v)->vm.setIsVisibilityPassword()}"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{vm.isVisibility ? @drawable/ic_icon_visibility_off : @drawable/ic_icon_visibility}">

                </ImageView>
            </FrameLayout>

            <Button
                android:id="@+id/btnEPUpdate"
                style="@style/AppButtonStyle"
                android:layout_marginVertical="@dimen/_40sdp"
                android:enabled="@{!TextUtils.isEmpty(vm.fullName)  &amp;&amp; !TextUtils.isEmpty(vm.phone) &amp;&amp; !TextUtils.isEmpty(vm.password)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:onClick="@{(v) -> vm.signup()}">

            </Button>
        </LinearLayout>



    </ScrollView>
</layout>