<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingTop="@dimen/_15sdp">

                <TextView
                    style="@style/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />

                <TextView
                    style="@style/app_text_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/logout_description" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/btnCancel"
                        style="@style/app_text_b"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/background_button_stroke_green"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/green_light_app" />

                    <TextView
                        android:id="@+id/btnLogout"
                        style="@style/app_text_b"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@drawable/background_button_solid_green"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/logout"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>